fix small screen overflow

--- a/TASKS/html/vention-html-task/src/styles/header.css
+++ b/TASKS/html/vention-html-task/src/styles/header.css
@@ -1,6 +1,6 @@
 /* Hero Section with Dark Linear Overlay Tint */
 .hero-header {
-  width: 100vw;
+  width: 100%;
   height: 350px;
 
   /* gradient over background image */
